--- a/src/tokens/color/buttons.css
+++ b/src/tokens/color/buttons.css
@@ -11,4 +11,8 @@
     color-mix(in hsl, var(--chroma-primary-70), transparent 67%),
     color-mix(in hsl, var(--chroma-surface-80), var(--chroma-surface-70) 50%)
   );
+  --color-button-cta: light-dark(
+    var(--chroma-surface-80),
+    var(--chroma-surface-80)
+  );
 }
